<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/menuStepImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/add" />

    <EditText
        android:id="@+id/menuStepEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textMultiLine" />

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/add_menu_step_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:text="上传"
        android:onClick="sendMenuStep"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorError="@color/red_error"
        custom:pb_colorNormal="@color/blue_normal"
        custom:pb_colorPressed="@color/blue_pressed"
        custom:pb_colorProgress="@color/purple_progress"
        custom:pb_textComplete="Success"
        custom:pb_textError="Error"
        custom:pb_textProgress="Loading"
        />
</LinearLayout>
