...

            <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/upload_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="添加步骤"
                android:onClick="addAMenuStep"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorError="@color/red_error"
            custom:pb_colorNormal="@color/blue_normal"
...
