...
            android:layout_height="wrap_content"
            android:text="标题"
            android:textColor="@color/text_c1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/menu_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_c1"
            android:textSize="18sp"
            />

...
