...
        android:layout_gravity="bottom"
        android:background="#EAEAEA"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/tab_home_click"
...
